# ClosestPointToPolygonMesh

./: .gitignore  CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  README.md
src/: CMakeLists.txt  Doxyfile.in  Release Notes.md  geometry_test.cpp  main.cpp
src/data/: cache.cpp  data.cpp  geometry.cpp  geometry.h  polygon_mesh.cpp
src/include/: types.h
src/include/data/: cache.h  data.h  geometry.h  math.h  polygon_mesh.h  spacial.h
src/tests/: CMakeLists.txt  CMakeLists.txt.in  cache_test.cpp  data_test.cpp  geometry_tests.cpp  main.cpp  polygon_mesh_tests.cpp
